--- a/.github/workflows/deploy-aks-automatic.yml
+++ b/.github/workflows/deploy-aks-automatic.yml
@@ -26,6 +26,13 @@ jobs:
     name: Terraform Plan
     runs-on: ubuntu-latest
     steps:
+      - name: Log in to Azure Container Registry
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       - name: Checkout code
         uses: actions/checkout@v2
 
