Add Spring Boot application files and configuration for React integration

--- a/apps/springboot/src/main/resources/application.properties
+++ b/apps/springboot/src/main/resources/application.properties
@@ -1,8 +1,2 @@
 spring.data.rest.base-path=/api
-spring.datasource.url=jdbc:postgresql://<your-azure-postgres-url>:5432/<your-database-name>
-spring.datasource.username=<your-username>
-spring.datasource.password=<your-password>
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+server.port=8081
