Add Spring Boot application files and Docker configuration

--- a/apps/springboot/pom.xml
+++ b/apps/springboot/pom.xml
@@ -57,9 +57,15 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+        	<groupId>mysql</groupId>
+        	<artifactId>mysql-connector-java</artifactId>
+        	<version>8.0.14</version>
+    </dependency>
 	</dependencies>
 
 	<build>
+		<finalName>spring-boot-web</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
