--- a/apps/springboot/backend/backend-deployment.yaml
+++ b/apps/springboot/backend/backend-deployment.yaml
@@ -14,9 +14,16 @@ spec:
     spec:
       containers:
         - name: backend
-          image: <your-backend-image>
+          image: ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest>
           ports:
             - containerPort: 8080
+          resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
