--- a/apps/springboot/frontend/frontend-deployment.yaml
+++ b/apps/springboot/frontend/frontend-deployment.yaml
@@ -14,9 +14,16 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: <your-frontend-image>
+          image: ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest>
           ports:
             - containerPort: 80
+          resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
@@ -30,3 +37,35 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: springboot-ingress
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: letsencrypt
+spec:
+  rules:
+  - host: ${{ secrets.domain }}
+    http:
+      paths:
+      - path: /(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend-service
+            port:
+              number: 80
+      - path: /api/(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: backend-service
+            port:
+              number: 8080
+  tls:
+  - hosts:
+    - ${{ secrets.domain }}
+    secretName: your-tls-secret
