--- a/cluster-deployment/k8s/cluster-issuer.yaml
+++ b/cluster-deployment/k8s/cluster-issuer.yaml
@@ -1,11 +1,10 @@
-# cluster-issuer.yaml
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
 spec:
   acme:
-    email: olaf@${{ secrets.domain }}
+    email: ${{ secrets.email }}
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-account-key
