Refactor GitHub workflows to enable manual triggering and remove obsolete test configurations; add new test assertions for resource validation

--- a/.github/workflows/cluster-deployment-terraform-test.yml
+++ b/.github/workflows/cluster-deployment-terraform-test.yml
@@ -2,10 +2,11 @@
 name: Terraform Test
 
 on:
-  pull_request:
-    branches: [ main ]
-  push:
-    branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
+  # push:
+  #   branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   terraform-test:
