--- a/.github/workflows/dotnet-aks-deployment.yml
+++ b/.github/workflows/dotnet-aks-deployment.yml
@@ -37,6 +37,8 @@ jobs:
 
     - name: Set up Azure CLI
       uses: azure/cli@v1
+      with:
+        inlineScript: az --version
 
     - name: Log in to Azure
       run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
