--- a/.github/workflows/springboot_wasm_test.yml
+++ b/.github/workflows/springboot_wasm_test.yml
@@ -1,9 +1,9 @@
 name: WebAssembly Springboot Frontend Tests
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
   workflow_dispatch:
 
 jobs:
