Update GitHub workflow to enable manual triggering and add .env to .gitignore

--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -2,9 +2,10 @@
 
 name: Run Azure Login with OIDC
 on: 
-    push:
-      branches:
-      - main
+    # push:
+    #   branches:
+    #   - main
+  workflow_dispatch:
 
 permissions:
   id-token: write
