--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: Azure login
         uses: azure/login@v2
