--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -1,8 +1,8 @@
 name: Deploy AKS Cluster Infra
 on:
-  # pull_request:
-  #   branches:
-  #     - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -22,6 +22,7 @@ jobs:
         working-directory: ./cluster-deployment
     name: Terraform Plan
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: Azure login
         uses: azure/login@v2
@@ -186,7 +187,7 @@ jobs:
       - name: Get AKS Credentials
         uses: azure/aks-set-context@v3
         with:
-          resource-group: ${{ secrets.RESOURCE_GROUP }}
+          resource-group: ${{ secrets.AKS_RESOURCE_GROUP }}
           cluster-name: ${{ secrets.AKS_CLUSTER_NAME }}
 
       - name: Install Helm
