--- a/.github/workflows/deploy-springboot-app.yml
+++ b/.github/workflows/deploy-springboot-app.yml
@@ -25,11 +25,11 @@ jobs:
           node-version: '16'  # Use your Node.js version
 
       - name: Build Backend
-        working-directory: backend
+        working-directory: apps/springboot/backend
         run: mvn clean package -DskipTests
 
       - name: Build Frontend
-        working-directory: frontend
+        working-directory: apps/springboot/frontend
         run: |
           npm install
           npm run build
@@ -41,15 +41,15 @@ jobs:
 
       - name: Build and Push Backend Image
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/backend:${{ github.sha }} ./backend
-          echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/backend:${{ github.sha }}
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/backend:${{ github.sha }} ./apps/springboot/backend
+          az acr login --name ${{ secrets.ACR_NAME }}
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/backend:${{ github.sha }}
 
       - name: Build and Push Frontend Image
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/frontend:${{ github.sha }} ./frontend
-          echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/frontend:${{ github.sha }}
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/frontend:${{ github.sha }} ./apps/springboot/frontend
+          az acr login --name ${{ secrets.ACR_NAME }}
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/frontend:${{ github.sha }}
 
       - name: Set AKS context
         uses: azure/aks-set-context@v2
@@ -59,5 +59,5 @@ jobs:
 
       - name: Deploy to AKS
         run: |
-          kubectl set image deployment/backend-deployment backend=${{ secrets.ACR_LOGIN_SERVER }}/backend:${{ github.sha }}
+          kubectl set image deployment/apps/springboot/backend-deployment apps/springboot/backend=${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/backend:${{ github.sha }}
           kubectl set image deployment/frontend-deployment frontend=${{ secrets.ACR_LOGIN_SERVER }}/frontend:${{ github.sha }}
