--- a/.github/workflows/destroy-infra.yml
+++ b/.github/workflows/destroy-infra.yml
@@ -19,7 +19,7 @@ jobs:
   terraform-destroy:
     name: Terraform Destroy
     runs-on: ubuntu-latest
-    environment: destroy
+    environment: dev
     defaults:
       run:
         working-directory: ./cluster-deployment
