--- a/cluster-deployment/k8s/cluster-issuer.yaml
+++ b/cluster-deployment/k8s/cluster-issuer.yaml
@@ -4,7 +4,7 @@ metadata:
   name: letsencrypt
 spec:
   acme:
-    email: ${{ secrets.email }}
+    email: ${{ secrets.EMAIL }}
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-account-key
