Update Spring Boot deployment workflow and frontend dependencies: force npm install, remove duplicate 'rest' dependency, and upgrade webpack and webpack-dev-server versions

--- a/.github/workflows/deploy-springboot-app.yml
+++ b/.github/workflows/deploy-springboot-app.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build Frontend
         working-directory: apps/springboot/frontend
         run: |
-          npm install
+          npm install --force
           npm run build
 
       - name: Azure Login
