--- a/.github/workflows/deploy-springboot-app.yml
+++ b/.github/workflows/deploy-springboot-app.yml
@@ -35,20 +35,27 @@ jobs:
           npm run build
 
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Log in to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Build and Push Backend Image
         run: |
           docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/backend:${{ github.sha }} ./apps/springboot/backend
-          az acr login --name ${{ secrets.ACR_NAME }}
           docker push ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/backend:${{ github.sha }}
 
       - name: Build and Push Frontend Image
         run: |
           docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/frontend:${{ github.sha }} ./apps/springboot/frontend
-          az acr login --name ${{ secrets.ACR_NAME }}
           docker push ${{ secrets.ACR_LOGIN_SERVER }}/apps/springboot/frontend:${{ github.sha }}
 
       - name: Set AKS context
