--- a/.github/workflows/dotnet-aks-deployment.yml
+++ b/.github/workflows/dotnet-aks-deployment.yml
@@ -24,6 +24,7 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }}
 
     - name: Build and push Docker image
+      working-directory: apps/dotnet
       run: |
         docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/aspnet-core-dotnet-core:latest .
         docker push ${{ secrets.ACR_LOGIN_SERVER }}/aspnet-core-dotnet-core:latest
@@ -40,8 +41,12 @@ jobs:
       with:
         inlineScript: az --version
 
-    - name: Log in to Azure
-      run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Set AKS context
       run: az aks get-credentials --resource-group ${{ secrets.AKS_RESOURCE_GROUP }} --name ${{ secrets.AKS_CLUSTER_NAME }}
