Add Azure CLI step to deployment workflows and update image reference in backend deployment

--- a/apps/springboot/backend/backend-deployment.yaml
+++ b/apps/springboot/backend/backend-deployment.yaml
@@ -14,16 +14,16 @@ spec:
     spec:
       containers:
         - name: backend
-          image: ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest>
+          image: ${{ secrets.ACR_LOGIN_SERVER }}/backend:latest>
           ports:
             - containerPort: 8080
           resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
