--- a/.github/workflows/dotnet-aks-deployment.yml
+++ b/.github/workflows/dotnet-aks-deployment.yml
@@ -24,13 +24,6 @@ jobs:
         login-server: ${{ secrets.ACR_LOGIN_SERVER }}
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
-    
-    - name: Azure CLI script
-      uses: azure/cli@v2
-      with:
-        azcliversion: latest
-        inlineScript: |
-          az account show
 
     - name: Build and push Docker image
       working-directory: apps/dotnet
@@ -46,7 +39,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Azure CLI
-      uses: azure/cli@v1
+      uses: azure/cli@v2
       with:
         inlineScript: az --version
 
@@ -57,17 +50,14 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Azure CLI script
-      uses: azure/cli@v2
+    - name: Get AKS Credentials
+      uses: azure/aks-set-context@v3
       with:
-        azcliversion: latest
-        inlineScript: |
-          az account show
-
-    - name: Set AKS context
-      run: az aks get-credentials --resource-group ${{ secrets.AKS_RESOURCE_GROUP }} --name ${{ secrets.AKS_CLUSTER_NAME }}
+        resource-group: ${{ secrets.AKS_RESOURCE_GROUP }}
+        cluster-name: ${{ secrets.AKS_CLUSTER_NAME }}
 
     - name: Deploy to AKS
+      working-directory: apps/dotnet
       run: |
         kubectl apply -f deployment.yml
         kubectl rollout status deployment/aspnet-core-deployment
@@ -77,5 +67,6 @@ jobs:
         pip install pytest kubernetes requests
   
     - name: Run Integration Tests
+      working-directory: apps/dotnet
       run: |
         pytest ./test/integration_tests.py -v
