--- a/.github/workflows/deploy-springboot-app.yml
+++ b/.github/workflows/deploy-springboot-app.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: dev
 
     steps:
       - name: Checkout code
