--- a/.github/workflows/dotnet-aks-deployment.yml
+++ b/.github/workflows/dotnet-aks-deployment.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: dev
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -33,6 +34,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    environment: dev
     needs: build
     steps:
     - name: Checkout code
