--- a/apps/springboot/frontend/frontend-deployment.yaml
+++ b/apps/springboot/frontend/frontend-deployment.yaml
@@ -48,7 +48,7 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
   rules:
-  - host: ${{ secrets.domain }}
+  - host: ${{ secrets.DOMAIN }}
     http:
       paths:
       - path: /(.*)
@@ -67,5 +67,5 @@ spec:
               number: 8080
   tls:
   - hosts:
-    - ${{ secrets.domain }}
+    - ${{ secrets.DOMAIN }}
     secretName: your-tls-secret
