Update deployment configurations to use specific Azure Container Registry images and replace domain secrets with hardcoded values

--- a/apps/springboot/backend/backend-deployment.yaml
+++ b/apps/springboot/backend/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: ${{ secrets.ACR_LOGIN_SERVER }}/backend:latest>
+          image: devacrfcaks.azurecr.io/backend:latest>
           ports:
             - containerPort: 8080
           resources:
