--- a/apps/dotnet/dotnet-deployment.yml
+++ b/apps/dotnet/dotnet-deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: aspnet-core-container
-        image: ${{ secrets.ACR_LOGIN_SERVER }}/aspnet-core-dotnet-core:latest
+        image: devacrfcaks.azurecr.io/aspnet-core-dotnet-core:latest
         ports:
         - containerPort: 80
         resources:
@@ -58,7 +58,7 @@ metadata:
 spec:
   tls:
     - hosts:
-      - ${{ secrets.DOMAIN }}
+      - dotnet.freundcloud.com
       secretName: your-tls-secret
   rules:
   - http:
