--- a/apps/springboot/frontend/frontend-deployment.yaml
+++ b/apps/springboot/frontend/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest>
+          image: devacrfcaks.azurecr.io/frontend:latest>
           ports:
             - containerPort: 80
           resources:
@@ -48,7 +48,7 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
   rules:
-  - host: ${{ secrets.DOMAIN }}
+  - host: frontend.freundcloud.com
     http:
       paths:
       - path: /(.*)
@@ -67,5 +67,5 @@ spec:
               number: 8080
   tls:
   - hosts:
-    - ${{ secrets.DOMAIN }}
+    - frontend.freundcloud.com
     secretName: your-tls-secret
