--- a/apps/springboot/backend/Dockerfile
+++ b/apps/springboot/backend/Dockerfile
@@ -1,6 +1,6 @@
 # backend/Dockerfile
 FROM adoptopenjdk/openjdk11:alpine-jre
 WORKDIR /app
-COPY target/backend.jar app.jar
+COPY target/backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
