--- a/apps/springboot/backend/pom.xml
+++ b/apps/springboot/backend/pom.xml
@@ -44,11 +44,11 @@
         <artifactId>h2</artifactId>
         <scope>runtime</scope>
       </dependency>
-      <dependency>
+      <!-- <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.14</version>
-      </dependency>
+      </dependency> -->
     </dependencies>
   
     <build>
