--- a/apps/dotnet/aspnet-core-dotnet-core/dotnet-deployment.yml
+++ b/apps/dotnet/aspnet-core-dotnet-core/dotnet-deployment.yml
@@ -14,13 +14,13 @@ spec:
   template:
     readinessProbe:
       httpGet:
-      path: /health
+      path: /healthz
       port: 80
       initialDelaySeconds: 5
       periodSeconds: 10
     livenessProbe:
       httpGet:
-      path: /health
+      path: /healthz
       port: 80
       initialDelaySeconds: 15
       periodSeconds: 20
