--- a/apps/dotnet/aspnet-core-dotnet-core/dotnet-deployment.yml
+++ b/apps/dotnet/aspnet-core-dotnet-core/dotnet-deployment.yml
@@ -69,7 +69,7 @@ metadata:
   name: dotnet-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: letsencrypt
@@ -77,7 +77,7 @@ spec:
   tls:
     - hosts:
       - dotnet.freundcloud.com
-      secretName: your-tls-secret
+      secretName: dotnet-tls-secret
   rules:
   - http:
       paths:
