--- a/apps/springboot/frontend/Dockerfile
+++ b/apps/springboot/frontend/Dockerfile
@@ -1,12 +1,13 @@
 # frontend/Dockerfile
-FROM node:14-alpine AS build
+FROM node:12.14.0-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+
 
 FROM nginx:alpine
 COPY --from=build /app/target/classes/static/built /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
