--- a/apps/springboot/frontend/frontend-deployment.yaml
+++ b/apps/springboot/frontend/frontend-deployment.yaml
@@ -17,24 +17,6 @@ spec:
           image: devacrfcaks.azurecr.io/frontend:latest
           ports:
             - containerPort: 80
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: 80
-            initialDelaySeconds: 5
-            periodSeconds: 10
-            timeoutSeconds: 2
-            successThreshold: 1
-            failureThreshold: 3
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 80
-            initialDelaySeconds: 15
-            periodSeconds: 20
-            timeoutSeconds: 2
-            successThreshold: 1
-            failureThreshold: 3
           resources:
             requests:
               memory: "128Mi"
@@ -61,7 +43,9 @@ kind: Ingress
 metadata:
   name: springboot-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
   ingressClassName: nginx
@@ -69,21 +53,14 @@ spec:
   - host: frontend.freundcloud.com
     http:
       paths:
-      - path: /(.*)
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: frontend-service
             port:
               number: 80
-      - path: /api/(.*)
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: backend-service
-            port:
-              number: 8080
   tls:
   - hosts:
     - frontend.freundcloud.com
-    secretName: your-tls-secret
+    secretName: springboot-tls-secret
