--- a/apps/springboot-split/frontend/package.json
+++ b/apps/springboot-split/frontend/package.json
@@ -28,17 +28,17 @@
   },
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@webpack-cli/serve": "^2.0.5",
     "babel-loader": "^8.0.2",
-    "babel-node": "0.0.1-security",
-    "webpack": "^4.47.0",
+    "jest": "^29.7.0",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^5.1.0"
+    "webpack-dev-server": "^4.15.1"
   }
 }
