--- a/.github/workflows/deploy-springboot-original.yml
+++ b/.github/workflows/deploy-springboot-original.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Springboot OriginalApp to AKS
+name: Build and Deploy Springboot App to AKS
 
 on:
   workflow_dispatch:
@@ -31,6 +31,12 @@ jobs:
         working-directory: apps/springboot/backend
         run: mvn clean package -DskipTests
 
+      - name: Build Frontend
+        working-directory: apps/springboot/frontend
+        run: |
+          npm install --force
+          npm run build
+
       - name: Azure Login
         uses: azure/login@v2
         with:
@@ -52,10 +58,15 @@ jobs:
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
+      - name: Build and Push Backend Image
+        run: |
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/backend:latest ./apps/springboot/backend
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/backend:latest
+
       - name: Build and Push Frontend Image
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/springboot:latest ./apps/springboot-org
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/springboot:latest
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest ./apps/springboot/frontend
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest
 
       - name: Set AKS context
         uses: azure/aks-set-context@v2
@@ -64,6 +75,7 @@ jobs:
           resource-group: ${{ secrets.AKS_RESOURCE_GROUP }}
 
       - name: Deploy to AKS
-        working-directory: apps/springboot-org
+        working-directory: apps/springboot
         run: |
-          kubectl apply -f backend/deployment.yaml
+          kubectl apply -f backend/backend-deployment.yaml
+          kubectl apply -f frontend/frontend-deployment.yaml
