Remove frontend build step from original deployment workflow and add it to the updated workflow

--- a/.github/workflows/deploy-springboot-app.yml
+++ b/.github/workflows/deploy-springboot-app.yml
@@ -31,6 +31,12 @@ jobs:
         working-directory: apps/springboot/backend
         run: mvn clean package -DskipTests
 
+      - name: Build Frontend
+        working-directory: apps/springboot/frontend
+        run: |
+          npm install --force
+          npm run build
+
       - name: Azure Login
         uses: azure/login@v2
         with:
