--- a/.github/workflows/deploy-springboot-original.yml
+++ b/.github/workflows/deploy-springboot-original.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: '16'  # Use your Node.js version
 
       - name: Build Backend
-        working-directory: apps/springboot/backend
+        working-directory: apps/springboot-org
         run: mvn clean package -DskipTests
 
       - name: Azure Login
@@ -51,25 +51,21 @@ jobs:
           login-server: ${{ secrets.ACR_LOGIN_SERVER }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Build and Push Backend Image
-        run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/backend:latest ./apps/springboot/backend
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/backend:latest
-
+      
       - name: Build and Push Frontend Image
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest ./apps/springboot/frontend
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/frontend:latest
-
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/springboot:latest ./apps/springboot-org
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/springboot:latest
+  
       - name: Set AKS context
         uses: azure/aks-set-context@v2
         with:
           cluster-name: ${{ secrets.AKS_CLUSTER_NAME }}
           resource-group: ${{ secrets.AKS_RESOURCE_GROUP }}
-
+  
       - name: Deploy to AKS
-        working-directory: apps/springboot
+        working-directory: apps/springboot-org
         run: |
-          kubectl apply -f backend/backend-deployment.yaml
-          kubectl apply -f frontend/frontend-deployment.yaml
+          kubectl apply -f backend/deployment.yaml
+
+ 
