--- a/.github/workflows/deploy-springboot-original.yml
+++ b/.github/workflows/deploy-springboot-original.yml
@@ -66,6 +66,6 @@ jobs:
       - name: Deploy to AKS
         working-directory: apps/springboot-org
         run: |
-          kubectl apply -f backend/deployment.yaml
+          kubectl apply -f deployment.yaml
 
  
