Update MySQL connection settings to use environment variables in application properties and deployment workflow

--- a/.github/workflows/deploy-springboot-mysql.yml
+++ b/.github/workflows/deploy-springboot-mysql.yml
@@ -29,6 +29,11 @@ jobs:
 
       - name: Build Backend
         working-directory: apps/springboot-mysql
+        env:
+          MYSQL_SERVER_NAME: ${{ secrets.MYSQL_SERVER_NAME }}
+          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+          MYSQL_USERNAME: ${{ secrets.MYSQL_USERNAME }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         run: mvn clean package -DskipTests
 
       - name: Azure Login
