--- a/apps/springboot-mysql/src/main/resources/application.properties
+++ b/apps/springboot-mysql/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.data.rest.base-path=/api
 # Azure MySQL connection settings
-spring.datasource.url=jdbc:mysql://<your-azure-mysql-server-name>.mysql.database.azure.com:3306/<database-name>?useSSL=true&requireSSL=false
-spring.datasource.username=<your-username>@<your-azure-mysql-server-name>
-spring.datasource.password=<your-password>
+spring.datasource.url=jdbc:mysql://${MYSQL_SERVER_NAME}.mysql.database.azure.com:3306/${MYSQL_DATABASE}?useSSL=true&requireSSL=false
+spring.datasource.username=${MYSQL_USERNAME}@${MYSQL_SERVER_NAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
