--- a/apps/springboot-mysql/deployment.yml
+++ b/apps/springboot-mysql/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: springboot-ingress
+  name: springboot-mysql-ingress
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
@@ -17,7 +17,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: springboot-service
+                name: springboot-mysql-service
                 port:
                   number: 8080
   tls:
@@ -29,7 +29,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: springboot-service
+  name: springboot-mysql-service
   labels:
     app: springboot
 spec:
