Refactor deployment workflow: change job dependency from deploy-pages to security-checks

--- a/.github/workflows/deploy-springboot-mysql.yml
+++ b/.github/workflows/deploy-springboot-mysql.yml
@@ -137,7 +137,7 @@ jobs:
   #       uses: actions/deploy-pages@v2
 
   build-and-deploy:
-    needs: deploy-pages
+    needs: security-checks
     runs-on: ubuntu-latest
     environment: dev
 
