--- a/.github/workflows/deploy-springboot-mysql.yml
+++ b/.github/workflows/deploy-springboot-mysql.yml
@@ -18,15 +18,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Set up Java
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '17'
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       # OWASP Dependency Check
       - name: OWASP Dependency Check
         uses: dependency-check/Dependency-Check_Action@main
+        env:
+          JAVA_HOME: /opt/jdk
         continue-on-error: true
         with:
           project: 'springboot-mysql'
@@ -38,14 +40,14 @@ jobs:
       
       # After OWASP Dependency Check
       - name: Upload OWASP Report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@main
         with:
           name: dependency-check-report
           path: ${{ github.workspace }}/dependency-check-report.html
           
       # Add GitHub Pages deployment
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v1
         
       - name: Create Reports Directory
         run: |
