--- a/.github/workflows/deploy-springboot-mysql.yml
+++ b/.github/workflows/deploy-springboot-mysql.yml
@@ -37,27 +37,16 @@ jobs:
           args: >
             --failOnCVSS 11
             --enableRetired
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       
       # After OWASP Dependency Check
       - name: Upload OWASP Report
         uses: actions/upload-artifact@main
         with:
           name: dependency-check-report
-          path: ${{ github.workspace }}/dependency-check-report.html
-          
-      # Add GitHub Pages deployment
-      - name: Setup Pages
-        uses: actions/configure-pages@v1
-        
-      - name: Create Reports Directory
-        run: |
-          mkdir -p reports
-          cp ${{ github.workspace }}/dependency-check-report.html reports/index.html
-          
-      - name: Upload Pages Artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: reports
+          path: ${{ github.workspace }}/reports
 
       # Trivy container scan
       - name: Run Trivy vulnerability scanner
@@ -82,61 +71,6 @@ jobs:
         # Capture TruffleHog output
       - name: Capture TruffleHog output
         run: trufflehog git file://./ > reports/trufflehog-results.txt
-
-      # Create combined report
-      - name: Create Combined Security Report
-        run: |
-          cat << 'EOF' > reports/index.html
-          <!DOCTYPE html>
-          <html>
-          <head>
-            <title>Security Scan Results</title>
-            <style>
-              body { font-family: Arial; margin: 40px; }
-              .section { margin-bottom: 30px; }
-              h2 { color: #333; }
-            </style>
-          </head>
-          <body>
-            <h1>Security Scan Results</h1>
-            
-            <div class="section">
-              <h2>OWASP Dependency Check</h2>
-              <iframe src="dependency-check-report.html" width="100%" height="600px"></iframe>
-            </div>
-
-            <div class="section">
-              <h2>Trivy Scan Results</h2>
-              <pre>$(cat trivy-results.txt || echo "No Trivy results available")</pre>
-            </div>
-
-            <div class="section">
-              <h2>TruffleHog Secrets Scan</h2>
-              <pre>$(cat trufflehog-results.txt || echo "No TruffleHog results available")</pre>
-            </div>
-          </body>
-          </html>
-          EOF
-
-      # Upload combined report
-      - name: Upload Combined Report
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: reports
-
-  # deploy-pages:
-  #   needs: security-checks
-  #   permissions:
-  #     pages: write
-  #     id-token: write
-  #   environment:
-  #     name: dev
-  #     url: ${{ steps.deployment.outputs.page_url }}
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Deploy to GitHub Pages
-  #       id: deployment
-  #       uses: actions/deploy-pages@v2
 
   build-and-deploy:
     needs: security-checks
