--- a/.github/workflows/deploy-springboot-mysql.yml
+++ b/.github/workflows/deploy-springboot-mysql.yml
@@ -48,6 +48,27 @@ jobs:
           name: dependency-check-report
           path: ${{ github.workspace }}/reports
 
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+      - name: Azure CLI script
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
+  
+      - name: Log in to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
       # Trivy container scan
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
