--- a/.github/workflows/dotnet-aks-deployment.yml
+++ b/.github/workflows/dotnet-aks-deployment.yml
@@ -85,6 +85,7 @@ jobs:
           sarif_file: 'trivy-results.sarif'
   build:
     runs-on: ubuntu-latest
+    needs: security-checks
     environment: dev
     steps:
     - name: Checkout code
