--- a/.github/workflows/dotnet-aks-deployment.yml
+++ b/.github/workflows/dotnet-aks-deployment.yml
@@ -76,13 +76,13 @@ jobs:
           image-ref: ${{ secrets.ACR_LOGIN_SERVER }}/aspnet-core-dotnet-core:latest
           format: 'sarif'
           vuln-type: 'os,library'
-          output: 'trivy-results.sarif'
+          output: 'dotnet-trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
       
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: 'dotnet-trivy-results.sarif'
   build:
     runs-on: ubuntu-latest
     needs: security-checks
