Add Azure login and Trivy scan steps to Spring Boot deployment workflow; remove redundant steps from .NET deployment workflow

--- a/.github/workflows/deploy-springboot-mysql.yml
+++ b/.github/workflows/deploy-springboot-mysql.yml
@@ -48,6 +48,43 @@ jobs:
           name: dependency-check-report
           path: ${{ github.workspace }}/reports
 
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+      - name: Azure CLI script
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
+  
+      - name: Log in to Azure Container Registry
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
+      # Trivy container scan
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        continue-on-error: true
+        with:
+          image-ref: ${{ secrets.ACR_LOGIN_SERVER }}/springboot:latest
+          format: 'sarif'
+          vuln-type: 'os,library'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+      
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
+
   build-and-deploy:
     needs: security-checks
     runs-on: ubuntu-latest
